custo-002 - Deletar Funcionário pelo Id

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=custoFacil
-spring.datasource.url=${DB_URL}/custoFacil
+spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
