--- a/.github/workflows/ink-branch-to-issue.yml
+++ b/.github/workflows/ink-branch-to-issue.yml
@@ -1,4 +1,4 @@
-name: Link Branch to Issue
+name: Link Branch to Issue Development
 
 on:
   push:
@@ -9,9 +9,6 @@ jobs:
   link_branch_to_issue:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the code
-        uses: actions/checkout@v3
-
       - name: Extract Issue Number
         id: extract_issue
         run: |
@@ -24,5 +21,5 @@ jobs:
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/issues/${{ env.ISSUE_NUMBER }}/comments \
-            -d '{"body": "Branch linked: '${{ github.ref_name }}'"}'
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ env.ISSUE_NUMBER }}/development \
+            -d '{"reference": {"name": "'${{ github.ref_name }}'", "ref_type": "branch", "url": "https://github.com/'${{ github.repository }}'/tree/'${{ github.ref_name }}'"}}'
